change:(modified the notebook and requirement file to run a demo with perso token)

--- a/labs/Lab2_SA_with_HuggingFace/Get_Started.ipynb
+++ b/labs/Lab2_SA_with_HuggingFace/Get_Started.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -39,14 +39,15 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "execution_count": 1,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'torch'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# First, we need to setup our environment by changing runtime to gpu\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m      3\u001b[39m torch.cuda.is_available()\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'torch'"
+          ]
         }
       ],
       "source": [
@@ -57,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,19 +71,8 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "sudo: a terminal is required to read the password; either use the -S option to read from standard input or configure an askpass helper\n",
-            "sudo: a password is required\n"
+            "Sudo est désactivé sur cet ordinateur. Pour l’activer, accédez à \u001b]8;;ms-settings:developers\u001b\\Developer Settings page\u001b]8;;\u001b\\ dans l’application Paramètres\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "256"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -101,61 +91,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 332,
-          "referenced_widgets": [
-            "db0805da67384b489b2fa1dab659b263",
-            "fbeb94b31af0487086696a7f819c6f1e",
-            "8ff5b206d2174a03a846ec5e9f6ed50d",
-            "e2094ff929ba4d678759f90263a1eaf4",
-            "15ab546ed2964031a1355f6e1f0ae4cb",
-            "2d78893012d04c6a80b03542066cd962",
-            "64708b1212da4664abf6bf1d2ffec036",
-            "3f0fa476e73c46faa8804230c850d35d",
-            "2bf1a5e041e64d84b0448721a5ef2fc4",
-            "4725193795f040259398e57c07188b3b",
-            "a48100ba760c400990464c941b1eb6e6",
-            "f05732e4ada949efad2577360a751e7b",
-            "2e9e58ed474e44fca570031ad990352a",
-            "3c146f9a78c24a119292c4f910afbc81",
-            "530bca551e7a4b39898472563f1ac9d1",
-            "d3527962bb8c4831af5e87ff30bbe41d",
-            "a1405489278c4ff58d5cc7b8bf2ac4d3"
-          ]
-        },
-        "id": "5CR4qcWqmWjL",
-        "outputId": "826f57b4-da0c-4691-b336-181c8378e4fb"
-      },
+      "execution_count": 12,
+      "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "/Users/alimokh/GitHub/NLP-with-HuggingFace/HF_SA_MLOps/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-            "  warnings.warn(\n"
+            "\n",
+            "    _|    _|  _|    _|    _|_|_|    _|_|_|  _|_|_|  _|      _|    _|_|_|      _|_|_|_|    _|_|      _|_|_|  _|_|_|_|\n",
+            "    _|    _|  _|    _|  _|        _|          _|    _|_|    _|  _|            _|        _|    _|  _|        _|\n",
+            "    _|_|_|_|  _|    _|  _|  _|_|  _|  _|_|    _|    _|  _|  _|  _|  _|_|      _|_|_|    _|_|_|_|  _|        _|_|_|\n",
+            "    _|    _|  _|    _|  _|    _|  _|    _|    _|    _|    _|_|  _|    _|      _|        _|    _|  _|        _|\n",
+            "    _|    _|    _|_|      _|_|_|    _|_|_|  _|_|_|  _|      _|    _|_|_|      _|        _|    _|    _|_|_|  _|_|_|_|\n",
+            "\n"
           ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ce07127f019e416fbfd4301807e1fc53",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
         }
       ],
       "source": [
-        "from huggingface_hub import notebook_login\n",
-        "notebook_login()"
+        "from huggingface_hub import interpreter_login\n",
+        "interpreter_login()\n",
+        " "
       ]
     },
     {
@@ -183,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -240,30 +196,14 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias']\n",
-            "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-            "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-            "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-            "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "text: I love this movie\n",
-            "Sentiment: LABEL_1 Confidence:  0.5155360698699951\n"
-          ]
-        },
-        {
-          "ename": "",
-          "evalue": "",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'transformers'",
           "output_type": "error",
           "traceback": [
-            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pipeline\n\u001b[32m      2\u001b[39m model_name = \u001b[33m\"\u001b[39m\u001b[33mbert-base-uncased\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m sentiment_classifier = pipeline(\u001b[33m\"\u001b[39m\u001b[33msentiment-analysis\u001b[39m\u001b[33m\"\u001b[39m, model=model_name)\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'transformers'"
           ]
         }
       ],
@@ -658,11 +598,23 @@
       "outputs": [],
       "source": [
         "from transformers import TrainingArguments, Trainer\n",
+        "from transformers import DistilBertTokenizer, DistilBertForSequenceClassification, DataCollatorWithPadding\n",
         "\n",
-        "repo_name = \"\" # name of the repo\n",
+        "tokenizer = DistilBertTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
+        "model = DistilBertForSequenceClassification.from_pretrained(\"distilbert-base-uncased\", num_labels=2)\n",
+        "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)\n",
+        "\n",
+        "def preprocess_function(examples):\n",
+        "    return tokenizer(examples[\"text\"], truncation=True)\n",
+        "\n",
+        "tokenized_train = small_train_dataset.map(preprocess_function, batched=True)\n",
+        "tokenized_test = small_test_dataset.map(preprocess_function, batched=True)\n",
+        "\n",
+        "\n",
+        "repo_name = \"MrRichu/distilbert-imdb-sentiment-analysis\" # name of the repo\n",
         "\n",
         "training_args = TrainingArguments(\n",
-        "    output_dir=repo_name,\n",
+        "    output_dir=\"./results\", # Changed output_dir to a local path\n",
         "    learning_rate=2e-5,\n",
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=16,\n",
@@ -670,6 +622,7 @@
         "    weight_decay=0.01,\n",
         "    save_strategy=\"epoch\",\n",
         "    push_to_hub=True,\n",
+        "    hub_model_id=repo_name, # Add hub_model_id for pushing to hub\n",
         ")\n",
         "\n",
         "trainer = Trainer(\n",
@@ -770,6 +723,21 @@
       },
       "source": [
         "# Testing the pipeline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "save_path = \"artifacts/sentiment_model\"\n",
+        "trainer.save_model(save_path)\n",
+        "\n",
+        "from transformers import AutoTokenizer\n",
+        "AutoTokenizer.from_pretrained(\"bert-base-uncased\").save_pretrained(save_path)\n",
+        "\n",
+        "print(\"Saved to:\", save_path)"
       ]
     },
     {
@@ -893,7 +861,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.11.9"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
