change:(modified the notebook and requirement file to run a demo with perso token)

--- a/labs/Lab2_SA_with_HuggingFace/Get_Started.ipynb
+++ b/labs/Lab2_SA_with_HuggingFace/Get_Started.ipynb
@@ -29,27 +29,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8TnE0GB9nNkP",
-        "outputId": "df16d7b0-005c-4f19-8770-3a0e18154176"
-      },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'torch'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# First, we need to setup our environment by changing runtime to gpu\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m      3\u001b[39m torch.cuda.is_available()\n",
-            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'torch'"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# First, we need to setup our environment by changing runtime to gpu\n",
         "import torch\n",
@@ -139,74 +121,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 233,
-          "referenced_widgets": [
-            "14b7b59de42e4a42a436f5a16537bd1b",
-            "ab5ff58ba48f4720841cc0a3661a644f",
-            "5dcb3156d6bd446786a07b44ff95011a",
-            "dbea2a3e7abd43df9e0a48db2f07bbbd",
-            "af53db647d6e4daab71bebe9b7963e56",
-            "32e8b57d93914cc5a47640f80d9a8f79",
-            "1484b4f41d434000b29418840bc6cecb",
-            "2968b5d054fc42edb98843b88813615e",
-            "e5cb8f305f35430ca536d53119450eb4",
-            "ad726549d28c416984397f6d4df8d0bc",
-            "a697c2a08ba44c4abbf92c30364f218d",
-            "dabdc27432fd4ed3b5fca67c912a3048",
-            "977ecddfa3764b59801e9f98b993e20e",
-            "06743727210647bb89bf82c38113dd91",
-            "7d748494fd8848548a05ee55adad25fe",
-            "989578401f374131afa7ddb25033d866",
-            "3ab5b8cb60b447d2af15db15e69ca14c",
-            "a113f89696de4f39944d4ae602da67ea",
-            "7ee429dc6cb0478984f1ecb0e4335b6a",
-            "b3c17f16916a44f9a1c8f189c3c032e5",
-            "af18746c24f1474bb4a176166a4b6679",
-            "01e8c33b306c480789726c93e266178d",
-            "3da143a4560a4998aa96304db0c123e9",
-            "fefb3786019d4dcfb5a41c5958948c93",
-            "c873d649c8c44db988a34b300627f1eb",
-            "4df61a70357242ada1931e9794f6e1d1",
-            "814acb7020714938a2d34951f6344b71",
-            "796ec8ebf4b147898e45aeeffc2071d0",
-            "11b1f74a3de142d68407cb83e7f486c7",
-            "074cf8f5c86b40d8bd3efc532f94b675",
-            "3fb3a5d1844e447d9b529be7a07a3350",
-            "db80370f11b442328198def98dbbffef",
-            "c7c38d28cd2b406bacca1cca7d11ee40",
-            "2368545644eb4095a7e93eac406b0516",
-            "d2200c6c46354a4a8859f0e3b4b3f341",
-            "03ce545c005c481090d6ea954fe27a8b",
-            "cf1f9c7fb78a440a92e0c8d8bc81de17",
-            "4ecdea0e0b474b2e8c35a71ea400c1a5",
-            "5f9121d4d5f947d980e444b41ec99c4a",
-            "1930e32d183c47f89db51a9f2fec9165",
-            "475e5d5861e94b23ba2de2256dbe67a8",
-            "385856d3f49b47a49a912d6683707702",
-            "a3e1abb73e814165b2dfc0c77b076bf3",
-            "22b409fe3ff548f481ae5e48ea4f3e54"
-          ]
-        },
-        "id": "y3QCo6ubVnyq",
-        "outputId": "96ac050b-b0e9-4bde-bd71-e7e346eae93b"
-      },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'transformers'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pipeline\n\u001b[32m      2\u001b[39m model_name = \u001b[33m\"\u001b[39m\u001b[33mbert-base-uncased\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m sentiment_classifier = pipeline(\u001b[33m\"\u001b[39m\u001b[33msentiment-analysis\u001b[39m\u001b[33m\"\u001b[39m, model=model_name)\n",
-            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'transformers'"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "from transformers import pipeline\n",
         "model_name = \"bert-base-uncased\"\n",
@@ -632,7 +549,7 @@
         "    eval_dataset=tokenized_test,\n",
         "    tokenizer=tokenizer,\n",
         "    data_collator=data_collator,\n",
-        "    compute_metrics=compute_metrics,\n",
+        "    #compute_metrics=compute_metrics,\n",
         ")"
       ]
     },
@@ -739,88 +656,6 @@
         "\n",
         "print(\"Saved to:\", save_path)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000,
-          "referenced_widgets": [
-            "5be683ca4b7a49aa8e9899954b3fb75e",
-            "42d8c4309ca14322bee6dc14cc2946e8",
-            "d11bf381e7a344bc95c0e291de6bff2f",
-            "abeada2758164f5cab2b2aeb05d733d8",
-            "5b1517487fca49c0ab49a135e69fa5ad",
-            "41140076fe4f4a2fa36602a1c3dd492b",
-            "f7a4b31ea7dc411782ed21f4c5496ebd",
-            "4952533266a8438193fcf2f34fbb57ed",
-            "3abd3680ed984265aa35a6e69f421e56",
-            "0495d2e1444e4c249b9f68a7d40db5fd",
-            "5dbd0137138242e3861965cf0d94e3aa",
-            "0fb86152dfb84990925067dfcf81a2fa",
-            "36af5888a5c04231a52f22beff9de696",
-            "4f8d1df4d9b8466aa3392cb005c25b1c",
-            "bd2f53a76c7f4acc98d1a8c0baceb8a7",
-            "d457e05707e94ab69b291bf17527c1c5",
-            "05d0e262289b4005a6ccd035f37ad8c3",
-            "37bcc4291f5d4f58bd87f1075bd50d9c",
-            "98716f4cc943464e8b30ac0c360337d6",
-            "9c52c516d7534ff985b7ad61e17068bb",
-            "e6ffaa3451a14f838a65c057c1209795",
-            "e8279b8e73364528ba0a28a9f356833a",
-            "a05a4e0185d1425b9afefc941e097b12",
-            "a26c1b6745dd4c07b270556907b72a92",
-            "e362696d6e4f4b3da21d2b2ed6305e7c",
-            "069905720ae849d69cebe77ae09a8571",
-            "591235f1742b46d2be27c15ace329af0",
-            "ff1c3d9b51304f788cbab0a02baf5f4e",
-            "0b713a4d3aaa41ee83fd3578da8c3705",
-            "e45b3af5a37d4ff5890ed05e1e73adfa",
-            "1e6bbcad96fb430eb21df8d23b12e4d6",
-            "a39d018cdb1f44fa97908ac268680786",
-            "60a0895375684b62ae506eda7fb197b4",
-            "da03385fd6804796bcd8521f4df0f739",
-            "29cf3a0af15a43a5bcb26a5d2a020f09",
-            "4c5d2ef6c61b4946a9969b9430156367",
-            "06f774452df54e0caa64895e5a513985",
-            "911eecae91bf430a98c75d51e5349771",
-            "8f3f6583d8c0457ba391379dcde17a76",
-            "58152a83a3de432cb475207a54ab20b6",
-            "79b26132d25e427491a1e29ff7365204",
-            "07800e308bff4c6ba9fedb0fdda567ba",
-            "b57c35a12df84ac0b3d04180a55cc0a0",
-            "f96a2286e1ac4b24b593d03e7130c087",
-            "8190950525684eafa1a18a454e78a7f0",
-            "19d07d3d6c22435a8ac78ff5ef2ae926",
-            "2f1820f8d6054b0984b0652527f4dcf8",
-            "e817be84a08a45258c80d2f3f88448e2",
-            "4be54b7da9414602a1b5d3ce2c4effef",
-            "a74386e83f594b1b8358f37a467495b1",
-            "739d6cf3ec8f4eb699dc817172505c3d",
-            "79fef79dd7ad4ffd924568003148b690",
-            "f19572f3973945a7890a4870eec3d2f7",
-            "2463b3b6292e4cc596fc89dc0e72be8e",
-            "b656dabf57714f7fb2cebc7e673a3eff",
-            "775c587c410c435e8687ffb1745a5c3a",
-            "d689e04d8a3c47798e03080e941fa4ef",
-            "d17c84f73f304e0093c49d260e64a134",
-            "61ee5dc88f844a9197d81bd7fa42cb53",
-            "a5f4afde948c4e78bdf46cb04c5d5e41",
-            "3dd7ecd6eb554aff8e920d7ef0057261",
-            "4a2b96a74246473a8e008ea6dd5bd66e",
-            "2b1c7b9c9589441a9c2b50335e736314",
-            "635ef6fedf114d989fc0691300e9bbc4",
-            "e928a64c5f654cd991b8db14ea0909ae",
-            "1b43dd415f8c439e901bd1fc2f944077"
-          ]
-        },
-        "id": "6KxeCBAZhF49",
-        "outputId": "bdb585a6-51a4-4739-fe46-abb8f3cb8037"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
